--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords"
-		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+	<meta name="keywords" content="Agence La Panthère, Lyon, Agence de web design, Entreprise de webdesign, Création site web design, Création design site internet, Agence de création
+		">
 	<meta name="description"
 		content="L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
